# Copyright © SixtyFPS GmbH <info@slint.dev>
# SPDX-License-Identifier: GPL-3.0-only OR LicenseRef-Slint-Royalty-free-2.0 OR LicenseRef-Slint-Software-3.0

[package]
name = "i-slint-renderer-vello"
description = "Vello based renderer for Slint"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[features]
default = ["i-slint-core/unstable-wgpu-28"]

[dependencies]
i-slint-core = { workspace = true, features = ["default", "box-shadow-cache", "shared-fontique", "shared-parley", "vello-scene"] }
i-slint-core-macros = { workspace = true, features = ["default"] }
i-slint-common = { workspace = true, features = ["default", "shared-fontique"] }

const-field-offset = { version = "0.1", path = "../../../helper_crates/const-field-offset" }

cfg-if = "1"
derive_more = { workspace = true }
lyon_path = "1.0"
pin-weak = "1"

# Vello core dependencies (main branch)
vello = { workspace = true }
vello_encoding = "0.8.0"
parley = { version = "0.7.0" }

# WGPU for rendering
wgpu-28 = { workspace = true, features = ["wgsl"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { workspace = true, features = ["console", "HtmlCanvasElement", "Window", "Document"] }
wasm-bindgen = { version = "0.2" }

[package.metadata.docs.rs]
rustdoc-args = ["--generate-link-to-definition"]
